--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Using a collaborative formula of designers, researchers,
+    photographers,videographers, and copywriters, we'll build and extend
+    your in digital places."
+    />
     <!-- icon -->
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <!-- fonts -->
